<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry,RtlHardcoded" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/reviewscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/getlisthomeactivity_listview_items_sampletwo_resName"
                android:textColor="@color/col_flame_light_Yellow" />
        </LinearLayout>

        <TextView
            android:id="@+id/reviewtext"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/review" 
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/reviewtime"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.33"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/agreebutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"  />

            <Button
                android:id="@+id/disagreebutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disagree" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:background="@color/col_dark_Yellow" />

</LinearLayout>