<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEFA"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbar_theflame"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_userprofileactivity_Back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="top"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@null"
            
            android:gravity="center_vertical"
            android:src="@drawable/ic_previous" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/title_bar"
            android:contentDescription="@null" />

        <View
            android:layout_width="36dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:background="#1E90FF"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_userprofileactivity_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="#1E90FF"
            android:gravity="center"
            android:text="@string/userprofile_topTitleuserProfile"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theflame_bg"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#B0E0E6"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_userprofileactivity_userimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/userphoto" />

                <TextView
                    android:id="@+id/txt_usergrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/userprofile_userName"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Start user Details mail id -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_userprofileactivity_emailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/userprofile_mailIdName"
                    android:textColor="#1E90FF"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txt_userid"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:text="@string/userprofile_mailId"
                        android:textColor="#1E90FF"
                        android:textSize="13sp" >

                    </TextView>

                    <ImageView
                        android:id="@+id/img_userprofileactivity_emailName"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="1dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_arrow" />
                </FrameLayout>
            </LinearLayout>
            <!-- End user Details mail id -->


            <!-- Start user Details mail id -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_userprofileactivity_contactnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/userprofile_phoneNumberName"
                    android:textColor="#1E90FF"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txt_usertel"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:text="@string/userprofile_phoneNumber"
                        android:textColor="#1E90FF"
                        android:textSize="13sp" >
                    </TextView>

                    <ImageView
                        android:id="@+id/img_userprofileactivity_contactedit"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="1dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_arrow" />
                </FrameLayout>
            </LinearLayout>
            <!-- End user Details mail id -->


            <!-- Start user Details mail id -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_userprofileactivity_placeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/userprofile_enterPlaceName"
                    android:textColor="#1E90FF"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txt_userpoint"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:text="@string/userprofile_enterPlace"
                        android:textColor="#1E90FF"
                        android:textSize="13sp" >
                    </TextView>

                    <ImageView
                        android:id="@+id/img_userprofileactivity_placeedit"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="1dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_arrow" />
                </FrameLayout>
            </LinearLayout>
            <!-- End user Details mail id -->

        </LinearLayout>
    </ScrollView>

</LinearLayout>