<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEFA"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry,RtlHardcoded" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/topbar_theflame"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_orderstatusactivity_Back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="top"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_previous" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/title_bar"
            android:contentDescription="@null" />

        <View
            android:layout_width="36dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:background="#1E90FF"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_orderstatusactivity_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
        	android:background="#1E90FF"
            android:gravity="center"
            android:text="@string/orderstatusactivity_topTitle"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/imgBtn_orderstatusactivity_picUp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/btn_drawable_second"
            android:contentDescription="@null"
            android:src="@drawable/ic_cart" />

        <ImageButton
            android:id="@+id/imgBtn_orderstatusactivity_delivery"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/btn_drawable_second"
            android:contentDescription="@null"
            android:src="@drawable/ic_cart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
   		android:background="#87CEFA"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1" >

            <TextView
                android:id="@+id/textView_orderstatusactivity_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:paddingLeft="5dp"
                android:text="@string/orderstatusactivity_itemDetails"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right" >

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView_orderstatusactivity_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/orderstatusactivity_priceName"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/textView_orderstatusactivity_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/orderstatusactivity_status"
                 android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <!-- End ListView Top Hedder -->

    <ListView
        android:id="@+id/listView_orderstatusactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theflame_bg"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:scrollbars="none" >
    </ListView>

    <TextView
        android:id="@+id/textView_orderstatusactivity_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theflame_bg"
        android:gravity="center"
        android:text="@string/emptylistView_string"
        android:textColor="@android:color/white" />

</LinearLayout>