<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_with_facebook_bg"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry,RtlHardcoded" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_loginactivity_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_weight="1"
                android:hint="@string/LoginActivity_img_email"
                android:inputType="textEmailAddress" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_loginactivity_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_weight="1"
                android:hint="@string/LoginActivity_img_password"
                android:inputType="textPassword"
                android:textColor="@color/col_dark_Yellow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:gravity="center"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/fraly_loginactivity_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button_drawable" >

            <ImageView
                android:id="@+id/img_loginactivity_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/textView_loginactivity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="13dp"
                android:text="@string/LoginActivity_frmLay_login"
                android:textColor="@color/col_dark_Yellow"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

        <ImageView
            android:id="@+id/img_loginactivity_loginfacebook"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:contentDescription="@null"
            android:src="@drawable/logon_with_facebook" />
    </LinearLayout>

</LinearLayout>